--- a/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
@@ -524,7 +524,7 @@
                 android:paddingTop="10dp"
                 android:paddingRight="23dp"
                 android:paddingBottom="10dp"
-                android:text="Capture image from camera"
+                android:text="@string/capture_from_camera"
                 android:textColor="@color/videos.upload_option.camera"
                 android:textSize="18sp"
                 app:fontName="oswald.ttf" />
@@ -537,7 +537,7 @@
                 android:paddingTop="10dp"
                 android:paddingRight="23dp"
                 android:paddingBottom="10dp"
-                android:text="Choose image from gallery"
+                android:text="@string/choose_from_gallery"
                 android:textColor="@color/videos.upload_option.camera"
                 android:textSize="18sp"
                 app:fontName="oswald.ttf" />
