--- a/MyCity4Kids/MyCity4Kids/res/layout/users_bookmark_recycle_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/users_bookmark_recycle_item.xml
@@ -6,29 +6,30 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
     android:paddingLeft="18dp"
+    android:paddingTop="10dp"
     android:paddingRight="18dp"
-    android:paddingTop="10dp">
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/articleImageView"
         android:layout_width="80dp"
         android:layout_height="50dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_article" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/articleTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_toEndOf="@+id/articleImageView"
         android:layout_toRightOf="@+id/articleImageView"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingBottom="5dp"
         android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text="@string/title"
         android:textColor="@color/article_listing.title"
         android:textSize="14sp"
@@ -38,9 +39,9 @@
         android:id="@+id/authorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/articleTitleTextView"
-        android:layout_alignStart="@+id/articleTitleTextView"
         android:layout_below="@+id/articleTitleTextView"
+        android:layout_alignStart="@+id/articleTitleTextView"
+        android:layout_alignLeft="@+id/articleTitleTextView"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="@string/title"
@@ -53,14 +54,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/shareImageView"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:drawableStart="@drawable/ic_views"
         android:drawableLeft="@drawable/ic_views"
         android:drawablePadding="4dp"
-        android:drawableStart="@drawable/ic_views"
         android:gravity="center"
-        android:paddingLeft="2dp"
         android:paddingStart="2dp"
+        android:paddingLeft="2dp"
         android:text="0"
         android:textColor="@color/article_listing.stats"
         android:textSize="12sp"
@@ -70,12 +71,12 @@
         android:id="@+id/separatorView1"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_alignTop="@+id/viewCountTextView"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="5dp"
+        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_toEndOf="@+id/viewCountTextView"
         android:layout_toRightOf="@+id/viewCountTextView"
         android:background="@color/common_underline" />
@@ -84,16 +85,16 @@
         android:id="@+id/commentCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
         android:layout_below="@id/articleTitleTextView"
-        android:layout_marginLeft="11dp"
+        android:layout_alignTop="@+id/viewCountTextView"
+        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:layout_toEndOf="@+id/viewCountTextView"
         android:layout_toRightOf="@+id/viewCountTextView"
+        android:drawableStart="@drawable/ic_comments"
         android:drawableLeft="@drawable/ic_comments"
         android:drawablePadding="4dp"
-        android:drawableStart="@drawable/ic_comments"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/article_listing.stats"
@@ -104,12 +105,12 @@
         android:id="@+id/separatorView2"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_alignTop="@+id/viewCountTextView"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="5dp"
+        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_toEndOf="@+id/commentCountTextView"
         android:layout_toRightOf="@+id/commentCountTextView"
         android:background="@color/common_underline" />
@@ -118,16 +119,16 @@
         android:id="@+id/recommendCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
         android:layout_below="@id/articleTitleTextView"
-        android:layout_marginLeft="11dp"
+        android:layout_alignTop="@+id/viewCountTextView"
+        android:layout_alignBottom="@+id/viewCountTextView"
         android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:layout_toEndOf="@+id/commentCountTextView"
         android:layout_toRightOf="@+id/commentCountTextView"
+        android:drawableStart="@drawable/ic_likes"
         android:drawableLeft="@drawable/ic_likes"
         android:drawablePadding="4dp"
-        android:drawableStart="@drawable/ic_likes"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/article_listing.stats"
@@ -138,9 +139,9 @@
         android:id="@+id/shareImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/authorTextView"
         android:layout_alignEnd="@+id/authorTextView"
         android:layout_alignRight="@+id/authorTextView"
-        android:layout_below="@+id/authorTextView"
         android:background="@drawable/unfollow_topic_author_bg"
         android:padding="6dp"
         android:src="@drawable/ic_share_white" />
@@ -152,8 +153,8 @@
         android:layout_above="@+id/view12"
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
-        android:layout_toLeftOf="@+id/shareImageView"
         android:layout_toStartOf="@+id/shareImageView"
+        android:layout_toLeftOf="@+id/shareImageView"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="@string/user_activities.bookmarks.remove"
