--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -67,6 +67,7 @@
     <color name="new_grey">#424242</color>
     <color name="canceltxt_color">#bdbdbd</color>
     <color name="greytxt_color">#616161</color>
+    <color name="grey_add_video_topic">#888888</color>
     <color name="new_blue">#4056DA</color>
 
     <color name="cool_grey">#9fa6b0</color>
