--- a/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
@@ -142,7 +142,7 @@
         android:drawablePadding="15dp"
         android:drawableTint="@color/app_red"
         android:padding="20dp"
-        android:text="Add a choice"
+        android:text="@string/add_a_choice"
         android:textSize="16sp"
         app:fontName="open_sans.ttf" />
 
