--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
@@ -119,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="Earn by participating in brand campaigns"
+                android:text="@string/onbording.desc_5"
                 android:textColor="@color/onboarding.desc"
                 android:textSize="13sp"
                 android:visibility="invisible"
