--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,9 +7,7 @@
     android:fillViewport="true"
     android:paddingBottom="30dp">
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -67,26 +64,13 @@
 
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
-
-
         </com.google.android.material.appbar.AppBarLayout>
 
-
-        <!--    <android.support.v7.widget.RecyclerView
-                android:id="@+id/horizontalRecyclerViewForVideoChallenge"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:nestedScrollingEnabled="true"
-                android:orientation="horizontal"
-
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-        <!--   </android.support.v7.widget.RecyclerView>-->
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/challengesTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/video_challenge_text"
             android:textColor="@color/greytxt_color"
@@ -118,32 +102,18 @@
             android:id="@+id/horizontalRecyclerViewForVideoChallenge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:nestedScrollingEnabled="true"
             android:orientation="horizontal"
             android:visibility="gone">
 
         </androidx.recyclerview.widget.RecyclerView>
-        <!-- <GridView
-             android:id="@+id/gridview"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:layout_marginLeft="16dp"
-             android:layout_marginTop="16dp"
-             android:layout_marginRight="16dp"
-             android:horizontalSpacing="16dp"
-             android:nestedScrollingEnabled="true"
-             android:numColumns="2"
-             android:scrollbars="none"
-             android:stretchMode="columnWidth"
-             android:verticalSpacing="16dp"
-             android:visibility="visible"
-             app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
+
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/categoriesTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/choose_video_categories_text"
             android:textColor="@color/greytxt_color"
@@ -164,12 +134,7 @@
             android:scrollbars="none"
             android:stretchMode="columnWidth"
             android:verticalSpacing="16dp"
-            android:visibility="visible">
+            android:visibility="visible" />
 
-        </com.mycity4kids.ui.videochallengenewui.ExpandableHeightGridView>
     </LinearLayout>
-    <!--   </android.support.v4.widget.NestedScrollView>-->
-    <!--
-            </LinearLayout>-->
-
 </ScrollView>
