--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -935,7 +935,7 @@
                         android:text="Rs 25 will be paid out once you successfully complete a MyMoney campaign."
                         android:textColor="@color/input_text_color"
                         android:textSize="13sp"
-                        android:visibility="visible"
+                        android:visibility="invisible"
                         app:fontName="open_sans.ttf" />
                 </RelativeLayout>
 
