--- a/MyCity4Kids/MyCity4Kids/res/layout/signin_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/signin_fragment.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical">
 
         <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/welcomeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
