--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -174,7 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/total_payout"
+                android:text="@string/slots_left"
                 android:textColor="@color/campaign_515151"
                 android:textSize="11sp"
                 app:fontName="open_sans.ttf"
