--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -21,8 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/rewards_personal_header"
                 android:textAllCaps="true"
                 android:textColor="@color/app_grey"
@@ -31,6 +30,7 @@
 
 
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/labelFirstName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -44,21 +44,20 @@
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/editFirstName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/space_40"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:hint=""
                 android:inputType="textNoSuggestions"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:padding="@dimen/space_8"
                 android:textColor="@color/app_light_black"
                 android:textSize="16dp"
                 app:fontName="oswald_regular.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/labelLastName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -72,17 +71,14 @@
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/editLastName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/space_40"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:hint=""
                 android:inputType="textNoSuggestions"
-                android:paddingStart="15dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:padding="@dimen/space_8"
                 android:textColor="@color/app_light_black"
                 android:textSize="16dp"
                 app:fontName="oswald_regular.ttf" />
@@ -110,7 +106,7 @@
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/editAddNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="57dp"
+                    android:layout_height="@dimen/space_40"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
@@ -136,7 +132,7 @@
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/editPhone"
                     android:layout_width="match_parent"
-                    android:layout_height="57dp"
+                    android:layout_height="@dimen/space_40"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
@@ -190,17 +186,14 @@
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/editEmail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/space_40"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:hint=""
                 android:inputType="textNoSuggestions"
-                android:paddingStart="15dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
+                android:padding="@dimen/space_8"
                 android:textColor="@color/app_light_black"
                 android:textSize="16dp"
                 app:fontName="oswald_regular.ttf" />
@@ -225,7 +218,7 @@
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/editLocation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/space_40"
                     android:layout_below="@+id/textViewLocation"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/mainprofile_thin_border"
@@ -233,10 +226,7 @@
                     android:focusable="false"
                     android:hint=""
                     android:inputType="textNoSuggestions"
-                    android:paddingStart="15dp"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:padding="5dp"
                     android:textColor="@color/app_light_black"
                     android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
@@ -246,7 +236,7 @@
                     android:layout_height="14dp"
                     android:layout_alignTop="@+id/editLocation"
                     android:layout_alignRight="@id/editLocation"
-                    android:layout_marginTop="21dp"
+                    android:layout_marginTop="13dp"
                     android:layout_marginRight="13dp"
                     android:layout_marginBottom="20dp"
                     android:src="@drawable/arrowdownnew" />
@@ -399,6 +389,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/langLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -458,7 +449,7 @@
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/editLanguage"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/space_40"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="15dp"
@@ -467,10 +458,7 @@
                     android:focusable="false"
                     android:hint="Select"
                     android:inputType="textNoSuggestions"
-                    android:paddingStart="15dp"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:padding="5dp"
                     android:textColor="@color/app_light_black"
                     android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
@@ -674,7 +662,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/space_10"
                     android:buttonTint="@color/app_red"
                     android:gravity="center_vertical"
                     android:paddingEnd="15dp"
@@ -682,6 +670,7 @@
                     android:text="@string/rewards_are_expecing"
                     android:textAllCaps="true"
                     android:textColor="@color/app_grey"
+                    app:fontName="open_sans.ttf"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/gender" />
 
@@ -733,6 +722,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/interestLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -791,7 +781,7 @@
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/editInterest"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/space_40"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="15dp"
@@ -800,10 +790,7 @@
                     android:focusable="false"
                     android:hint="Select"
                     android:inputType="textNoSuggestions"
-                    android:paddingStart="15dp"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:padding="5dp"
                     android:textColor="@color/app_light_black"
                     android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
@@ -814,9 +801,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="@dimen/space_10"
                     android:background="@drawable/shape_rectangle_light_red"
-                    android:paddingTop="5dp"
+                    android:paddingTop="@dimen/space_10"
+                    android:paddingBottom="@dimen/space_10"
                     android:visibility="visible">
 
                     <com.mycity4kids.widget.CustomFontTextView
@@ -835,6 +822,7 @@
                         android:text="@string/refer_code"
                         android:textColor="@color/campaign_515151"
                         android:textSize="17sp"
+                        android:visibility="gone"
                         app:fontName="oswald_regular.ttf"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
@@ -870,14 +858,13 @@
                         android:layout_height="@dimen/space_40"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:layout_marginStart="20dp"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="50dp"
                         android:layout_marginEnd="0dp"
                         android:layout_marginRight="0dp"
+                        android:textSize="14sp"
                         android:background="@drawable/shape_rectangle_light_grey_boder_white_solid"
-                        android:gravity="center_vertical"
+
                         android:hint="REFERRAL CODE(Optional)"
                         android:lineSpacingExtra="2.2dp"
                         android:paddingStart="15dp"
@@ -892,7 +879,6 @@
                         android:layout_height="@dimen/space_40"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:layout_marginRight="0dp"
                         android:background="@drawable/campaign_detail_refer_code_apply"
                         android:gravity="center"
@@ -916,7 +902,7 @@
                         android:lineSpacingExtra="1.3dp"
                         android:textColor="@color/campaign_refer_code_error"
                         android:textSize="13sp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:fontName="open_sans.ttf" />
 
 
@@ -935,7 +921,7 @@
                         android:text="Rs 25 will be paid out once you successfully complete a MyMoney campaign."
                         android:textColor="@color/input_text_color"
                         android:textSize="13sp"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         app:fontName="open_sans.ttf" />
                 </RelativeLayout>
 
@@ -947,10 +933,10 @@
                 android:layout_height="?attr/actionBarSize"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="@dimen/space_15"
+                android:layout_marginTop="@dimen/space_15"
+                android:layout_marginRight="@dimen/space_15"
+                android:layout_marginBottom="@dimen/space_15"
                 android:background="@color/app_red"
                 android:gravity="center"
                 android:text="@string/save_continue"
