--- a/MyCity4Kids/MyCity4Kids/res/drawable/campaign_subscription_open.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/campaign_subscription_open.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners
-        android:radius="@dimen/space_20" />
-    <solid android:color="@color/campaign_submit_proof_bg" />
+    <corners android:radius="@dimen/space_20" />
+    <solid android:color="@color/campaign_apply_bg" />
 
 
 </shape>
