--- a/MyCity4Kids/MyCity4Kids/res/layout/recycler_myearning.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recycler_myearning.xml
@@ -29,8 +29,8 @@
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/space_15"
             android:layout_marginTop="@dimen/space_15"
-            android:text="@string/total_earning"
             android:layout_toRightOf="@id/brandImageView"
+            android:text="@string/total_earning"
             android:textColor="@color/campaign_515151"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
@@ -43,10 +43,10 @@
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/space_15"
             android:layout_marginTop="@dimen/space_5"
+            android:layout_marginRight="@dimen/space_5"
+            android:layout_toLeftOf="@+id/payment_status"
             android:layout_toRightOf="@id/brandImageView"
             android:text="@string/total_earning"
-            android:layout_toLeftOf="@+id/payment_status"
-            android:layout_marginRight="@dimen/space_5"
             android:textColor="@color/campaign_expired"
             android:textSize="14sp"
             app:fontName="open_sans.ttf" />
@@ -171,16 +171,47 @@
                 app:fontName="open_sans_bold.ttf" />
         </RelativeLayout>
 
-        <View
-            android:id="@+id/view1"
+        <RelativeLayout
+            android:id="@+id/relative_four"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/relative_two"
-            android:layout_marginLeft="@dimen/space_90"
-            android:layout_marginTop="@dimen/space_10"
-            android:layout_marginRight="@dimen/space_15"
-            android:layout_marginBottom="@dimen/space_10"
-            android:background="#E5E5E5" />
+            android:layout_marginTop="@dimen/space_8">
+
+            <View
+                android:id="@+id/black_dot"
+                android:layout_width="@dimen/space_8"
+                android:layout_height="@dimen/space_8"
+                android:layout_marginLeft="@dimen/space_90"
+                android:layout_marginTop="@dimen/space_8"
+                android:background="@drawable/black_dot"
+                android:backgroundTint="#000" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/reimbursement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/space_8"
+                android:layout_toRightOf="@id/black_dot"
+                android:text="@string/earnings_reimbursement"
+                android:textColor="#9E9E9E"
+                android:textSize="13sp"
+                app:fontName="open_sans_bold.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/reimbursement_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/space_8"
+                android:layout_marginRight="@dimen/space_15"
+                android:text="512"
+                android:textColor="#9E9E9E"
+                android:textSize="13sp"
+                app:fontName="open_sans_bold.ttf" />
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/relative_three"
@@ -223,6 +254,17 @@
                 android:textSize="14sp"
                 app:fontName="open_sans_bold.ttf" />
         </RelativeLayout>
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/relative_four"
+            android:layout_marginLeft="@dimen/space_90"
+            android:layout_marginTop="@dimen/space_10"
+            android:layout_marginRight="@dimen/space_15"
+            android:layout_marginBottom="@dimen/space_10"
+            android:background="#E5E5E5" />
     </RelativeLayout>
 
 
@@ -231,5 +273,5 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/light_underline"/>
+        android:background="@color/light_underline" />
 </RelativeLayout>
