--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -523,4 +523,5 @@
     <color name="color_E8E6E6">#E8E6E6</color>
     <color name="color_A0A0A0">#A0A0A0</color>
     <color name="spell_check_error_highlight">#F9EAEE</color>
+    <color name="campaign_listing_light_green_bottom">#4AC670</color>
 </resources>
