--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -82,4 +82,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="space_90">90dp</dimen>
     <dimen name="space_44">44dp</dimen>
+    <dimen name="space_16">16dp</dimen>
 </resources>
